--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "eslint": "^7.32.0",
     "eslint-config-next": "12.0.7",
     "eslint-config-standard": "^16.0.3",
