--- a/package.json
+++ b/package.json
@@ -13,13 +13,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "eslint": "^7.32.0",
-    "eslint-config-next": "12.0.7",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-react": "^7.28.0"
+    "eslint": "8.7.0",
+    "eslint-config-next": "12.0.8"
   }
 }
