--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,7 +1,5 @@
 {
-  "extends": "next",
-  "rules": {
-    "react/no-unescaped-entities": "off",
-    "@next/next/no-page-custom-font": "off"
-  }
+  
+    "extends": ["next/babel","next/core-web-vitals"]
+  
 }
